--- a/v/index.html
+++ b/v/index.html
@@ -25,7 +25,7 @@
             $("#check1").click(function(){
                 let ans1 = m.E.getValue();
                 let ans3 = m.E.getResult();
-                if(ans1['m0']==1 && ans1['m1'].replace(/\s+/g, "")=='a+1'){
+                if(m.ExpressionType=='sqrt' && ans1['m0']==1 && ans1['m1'].replace(/\s+/g, "")=='a+1'){
                     $("#result1").text("你输入的是" + ans3 + " right").css("color", "green");
                 }else {
                     $("#result1").text("你输入的是" + ans3 + " false").css("color", "red");
@@ -71,23 +71,14 @@
         <div class="pure-g">
             <div class="exp pure-u-2-3"><span> \( (1-  \)</span>   <span id="id1"></span>  <span> \( )\centerdot\frac{a^2+2a+1}{a} = a+1\) </span></div>
             <div class="pure-u-1-3">
-                <!--<form style="display: inline;"class="pure-form pure-g">
-                    <div class="pure-u-1-4">
-                        <input id="ans1" style="display: inline;" class="pure-input-1" type="text">
-                    </div>
-                </form>-->
                 <button id="check1" class="pure-button pure-button-primary">Check</button>
+                tip: \( \frac{1}{a+1} \)
             </div> 
         </div>
         <div id="result1"></div>   
         <div class="pure-g">
             <div class="exp pure-u-2-3"><span> \( \frac{1}{3 + \sqrt{3}} + \frac{1}{5\sqrt{\FormInput{q2}} + 3\sqrt{5}} + \frac{1}{7\sqrt{5} + 5\sqrt{7}} + ... ...  + \frac{1}{49\sqrt{47} + 47\sqrt{49} } = 0.9\) </span></div>
             <div class="pure-u-1-3">
-                <!--<form style="display: inline;"class="pure-form pure-g">
-                    <div class="pure-u-1-4">
-                        <input id="ans2" style="display: inline;" class="pure-input-1" type="text">
-                    </div>
-                </form>-->
                 <button id="check2" class="pure-button pure-button-primary">Check</button>
             </div> 
         </div>
