--- a/v/index.html
+++ b/v/index.html
@@ -25,6 +25,7 @@
             $("#check1").click(function(){
                 let ans1 = m.E.getValue();
                 let ans3 = m.E.getResult();
+                console.log(m.ExpressionType);
                 if(m.ExpressionType=='frac' && ans1['m0']==1 && ans1['m1'].replace(/\s+/g, "")=='a+1'){
                     $("#result1").text("你输入的是" + ans3 + " right").css("color", "green");
                 }else {
