--- a/v2/index.html
+++ b/v2/index.html
@@ -46,6 +46,7 @@
             margin-left: 40px;
         }
         #result1,#result2 {
+            font-size: large;
             padding-top: 30px;
             height: 100px;
         }
