--- a/v2/index.html
+++ b/v2/index.html
@@ -9,10 +9,10 @@
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
         extensions: ["tex2jax.js","[Contrib]/forminput/forminput.js"],
-        jax: ["input/TeX","output/HTML-CSS"],
+        jax: ["input/TeX","output/NativeMML"],
         tex2jax: {inlineMath: [["$","$"],["\\(","\\)"]]},
         TeX: {extensions: ["AMSmath.js","AMSsymbols.js"]},
-        CommonHTML: {scale: 100},
+        NativeMML: {scale: 100},
         showProcessingMessages: false,
         showMathMenu: false
         });
@@ -21,20 +21,19 @@
     <script type="text/javascript" src="./mathinput/mathinput.js"></script>
     <script>
         $(document).ready(function(){
-
-            var d = new Control("#2")
+            var answer = {
+                "type": "frac",
+                "m0": "1", 
+                "m1": "a+1"
+            }
+            var d = new Control("#2", answer)
+            MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
             var answer = {
                 "type": "frac",
                 "m0": "1",
                 "m1": "a+1"
             }
-            $('#check1').click(function(){
-                if(d.check(answer)){
-                    $('#result1').text("√").css("color", "green");
-                } else {
-                    $('#result1').text("X").css("color", "red");
-                }
-            })
+            var e = new Control("#q2", answer)
         })
     </script>
     <style>
@@ -46,11 +45,12 @@
             margin-left: 40px;
         }
         #result1,#result2 {
+            font-size: large;
             padding-top: 30px;
             height: 100px;
         }
         .exp {
-            text-align: right;
+            text-align: center;
         }
         #ans1,#ans2 {
             margin-left: 20px; 
@@ -63,21 +63,14 @@
         <div class="pure-g">
             <div class="exp pure-u-2-3"><span> \( (1-  \)</span>   <div style="display: inline;position: relative" id="0"><div style="display: inline" id="1"><input id="2" style="width:54px" type="text"></div></div>  <span> \( )\centerdot\frac{a^2+2a+1}{a} = a+1\) </span></div>
             <div class="pure-u-1-3">
-                <button id="check1" class="pure-button pure-button-primary">Check</button>
-                <span>tip: \( \frac{1}{a+1} \)</span>
+                <p>tip: \( \frac{1}{a+1} \)</p>
             </div>
-            <div class="pure-u-2-3"></div>  
+            <div class="pure-u-2-3"></div>
             <div class="pure-u-1-3">
                 <div id="result1"></div>   
             </div>  
         </div>
-        <div class="pure-g">
-            <div class="exp pure-u-2-3"><span> \( \frac{1}{3 + \sqrt{3}} + \frac{1}{5\sqrt{\FormInput{q2}} + 3\sqrt{5}} + \frac{1}{7\sqrt{5} + 5\sqrt{7}} + ... ...  + \frac{1}{49\sqrt{47} + 47\sqrt{49} } = 0.9\) </span></div>
-            <div class="pure-u-1-3">
-                <button id="check2" class="pure-button pure-button-primary">Check</button>
-            </div> 
-        </div>
-        <div id="result2"></div>   
     </div>
+    
 </body>
 </html>
