mathjax editor test

--- a/mathjax-editor/index.html
+++ b/mathjax-editor/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>MathJax Mathematics Editor</title>
-  <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
   <style> 
     .mj-ed-display {
       border: 1px solid #ccc;
@@ -46,7 +46,7 @@
     });
   </script>
 
-  <script src="../dist/MathJaxEditor.js"></script>
+  <script src="./MathJaxEditor.min.js"></script>
   <script>
     window.onload = function () {
       var $buttons = document.getElementById('buttons');
