--- a/mathjax-editor/index.html
+++ b/mathjax-editor/index.html
@@ -56,6 +56,7 @@
         debug: true,
         newLine: true
       });
+      editor.focus()
 
       const buttons = {
         '\\sqrt{a}': function (editor) { editor.insertCommand('sqrt', 1) },
