--- a/mathjax-editor/index.html
+++ b/mathjax-editor/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>MathJax Mathematics Editor</title>
-  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
   <style> 
     .mj-ed-display {
       border: 1px solid #ccc;
@@ -38,7 +37,7 @@
   <textarea id="editor"></textarea>
 
 
-
+  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
   <script type='text/x-mathjax-config'>
     MathJax.Hub.Config({
       showMathMenu: false,
@@ -54,7 +53,7 @@
       const editor = new MathJaxEditor({
         el: '#editor',
         debug: true,
-        newLine: true
+        newLine: false
       });
       editor.focus()
 
@@ -96,6 +95,7 @@
         });
 
         $buttons.appendChild($button);
+        MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
       });
     };
   </script>
