--- a/mathquill-editor/index.html
+++ b/mathquill-editor/index.html
@@ -14,15 +14,16 @@
       background-color: #007fff;
       border: none;
       color: #fff;
-      display: flex;
-      float: left;
-      height: 48px;
-      justify-content: center;
-      width: 48px;
+      padding: 0;
+      /*display: flex;*/
+      /*float: left;*/
+      height: 60px;
+      /*justify-content: center;*/
+      width: 60px;
     }
 
     #buttons {
-      overflow: hidden;
+      /*overflow: hidden;*/
     }
     #editor-outer {
         margin-top: 0;
@@ -40,66 +41,48 @@
 
 <div id="buttons"></div>
 <p id="editor-outer"><span id="editor"></span></p>
-<div><textarea name="" id="result" cols="148" rows="2"></textarea></div>
+<div id="result"></div>
+<div><span id="static">a^b\sqrt{a}</span></div>
 </div>
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="./mathquill/mathquill.min.js"></script>
 <script type="text/javascript">
-    MQ = MathQuill.getInterface(MathQuill.getInterface.MAX);
+    MQ = MathQuill.getInterface(2);
+    MQ.StaticMath($('#static')[0])
     var mq = MQ.MathField($('#editor')[0], {
         autoSubscriptNumerals: true,
-        handlers: { edit: function() {
-            if (!latex.is(':focus')) latex.val(mq.latex());
-        } }
+        handlers: { 
+            edit: function() {
+                latex.html(mq.latex());
+            },
+            enter:function() {
+                alert("ca")
+            } 
+        }
     });
     mq.focus()
     var $buttons = document.getElementById('buttons');
-    const buttons = {
-        '\\sqrt{a}': '\\sqrt',
+    const buttons = {  
         '\\frac{a}{b}': '\\frac',
-        '\\geq': '\geq',
-        '\\leq': '\leq',
-        '\\alpha': '\alpha',
-        '\\beta': '\\beta',
         'a^n': '^',
-        'a_n': '_',
-        '|': '|',
-        '[': '[',
-        ']': ']',
-        '(': '(',
-        ')': ')',
-        ',': ',',
-        '.': '.',
-        '+': '+',
-        '-': '-',
-        ':': ':',
-        ';': ';',
-        '<': '<',
-        '>': '>',
-        '\\%': '\%',
+        '\\sqrt{a}': '\\sqrt',
       };
 
     Object.keys(buttons).forEach(function (lable) {
         var $button = document.createElement('button');
 
         $button.innerHTML = lable;
-        MQ.StaticMath($button);
         $button.addEventListener('click', function () {
           mq.cmd(buttons[lable])
           mq.focus()
         });
 
         $buttons.appendChild($button);
+        MQ.StaticMath($button);
+        
     });
     var latex = $("#result")
-    latex.bind('keydown keypress', function() {
-        var prev = latex.val();
-        setTimeout(function() {
-            var now = latex.val();
-            if (now !== prev) mq.latex(now);
-        });
-    })
-    latex.val(mq.latex());
+    latex.html(mq.latex());
 </script>
 </body>
 </html>
