--- a/mathquill2/index2.html
+++ b/mathquill2/index2.html
@@ -24,17 +24,14 @@
 <body>
 <div class="content">
 
-    <div class="exp">
-        <span class="static-math"> (1 - </span>
-        <p style="display: inline" id="m1"></p>
-        <span class="static-math"> ) \frac{a^2+2a+1}{a} = a+1 </span>
-    </div>
-    <div class="divider"></div>
+    
     <div class="exp">
         <span class="static-math"> \frac{1}{3 + \sqrt{3}} + </span>
         <span id="m2"></span>
         <span class="static-math"> + \frac{1}{7\sqrt{5} + 5\sqrt{7}} + ... ...  + \frac{1}{49\sqrt{47} + 47\sqrt{49} } = 0.9 </span>
     </div>
+    <div class="divider"></div>
+    <div><span id="" class="static-math"> tip: \frac{1}{5\sqrt{3} + 3\sqrt{5}}</span></div>
     <div id="result"></div>
 
 </div>
