--- a/mathquill-editor/index.html
+++ b/mathquill-editor/index.html
@@ -65,7 +65,7 @@
     const buttons = {  
         '\\frac{a}{b}': '\\frac',
         'a^n': '^',
-        '\\sqrt{a}': '\\sqrt',
+        '\\sqrt{a}': '\sqrt',
       };
 
     Object.keys(buttons).forEach(function (lable) {
