--- a/mathquill2/index2.html
+++ b/mathquill2/index2.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<meta name="viewport" content="width=624">
-
-<title>Editor Test</title>
-
-<!--<link rel="stylesheet" type="text/css" href="support/home.css">-->
-<link rel="stylesheet" type="text/css" href="./mathquill/mathquill.css">
-<link rel="stylesheet" type="text/css" href="./mathquill-editor.css">
-<style>
-    .content {
-        height: 2000px;
-        margin-top: 100px;
-        margin-left: 120px;
-        font-size: 150.0%;
-    }
-    .divider {
-        height: 100px;
-    }
-</style>
+    <meta name="viewport" content="width=624">
+    <title>Editor Test</title>
+    <link rel="stylesheet" type="text/css" href="./mathquill/mathquill.css">
+    <link rel="stylesheet" type="text/css" href="./mathquill-editor.css">
+    <style>
+        .content {
+            height: 2000px;
+            padding-top: 100px;
+            margin-left: 120px;
+            font-size: 150.0%;
+        }
+        .divider {
+            height: 50px;
+        }
+        #getresult {
+            width: 100px;
+            margin-right: 50px;
+        }
+    </style>
 </head>
 <body>
 <div class="content">
-
-    
+    <div class="exp pure-u-2-3">
+        <span class="static-math"> (1- </span>
+        <span id="m1"></span>
+        <span class="static-math"> ) \frac{a^2+2a+1}{a} = a+1 </span>
+    </div>
+    <div class="divider"></div>
+    <div><span id="" class="static-math"> tip: \frac{1}{a+1}</span></div>
+    <div class="divider"></div>
     <div class="exp">
         <span class="static-math"> \frac{1}{3 + \sqrt{3}} + </span>
         <span id="m2"></span>
@@ -32,7 +38,10 @@
     </div>
     <div class="divider"></div>
     <div><span id="" class="static-math"> tip: \frac{1}{5\sqrt{3} + 3\sqrt{5}}</span></div>
-    <div id="result"></div>
+    <div class="divider"></div>
+    <button id="getresult">点击获取输入</button>
+    <div id="result1"></div>
+    <div id="result2"></div>
 
 </div>
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
@@ -45,6 +54,14 @@
 
     var m1 = new mathEditor('#m1')
     var m2 = new mathEditor('#m2')
+
+    $("#getresult").click(function(){
+        var r1 = m1.getResult()
+        var r2 = m2.getResult()
+        $("#result1").text(r1)
+        $("#result2").text(r2)
+    })
+
 </script>
 </body>
 </html>
